resume section add

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ main{
 }
 
 .skills-content{
+    margin: 20px 0;
     display: flex;
     gap: 24px;
 }
@@ -135,4 +136,19 @@ main{
 /* resume area styles */
 .resume{
      margin: 130px 0;
+}
+.resume-content{
+    margin: 50px 0;
+    display: flex;
+    gap: 50px;
+    justify-content: space-around;
+}
+.resume-content h4, h5, p{
+    margin: 10px 0;
+}
+.resume-content-title{
+    margin-bottom: 15px;
+}
+.download{
+    text-align: center;
 }
